@@ -503,7 +503,7 @@ class LivingLifePage : public GamePage, public ActionListener {
         void clearMap();
         
         // enabled tutorail next time a connection loads
-        void runTutorial();
+        void runTutorial( int inNumber );
         
 
         char isMapBeingPulled();
@@ -555,7 +555,7 @@ class LivingLifePage : public GamePage, public ActionListener {
         
         int mRequiredVersion;
 
-        char mForceRunTutorial;
+        int mForceRunTutorial;
         int mTutorialNumber;
 
         char mGlobalMessageShowing;
