@@ -709,7 +709,7 @@ tutorial_20 "A FINAL CHALLENGE:  MAKE A HATCHET TO CHOP KINDLING.##GET THE FIRE 
 tutorial_2001 "ARE YOU FEELING REALLY STUCK?##WALK LEFT THROUGH THIS DOOR FOR HINTS."
 
 
-tutorial_21 "TUTORIAL COMPLETE.  AFTER YOU DIE, YOU'LL BE BORN FOR REAL.##A DEADLY PIT OF RATTLESNAKES IS PROVIDED FOR YOUR CONVENIENCE."
+tutorial_21 "TUTORIAL COMPLETE.  AFTER YOU DIE, YOU'LL START YOUR NEXT LIFE.##A DEADLY PIT OF RATTLESNAKES IS PROVIDED FOR YOUR CONVENIENCE."
 
 
 
@@ -757,6 +757,12 @@ tutorial_34 "YOU CAN USE THE FIREBRAND TO GO BACK AND LIGHT THE TORCH.##(HINT:  
 tutorial_99 "THIS IS THE END OF THE TUTORIAL.##AFTER YOU DIE HERE, YOU WILL BE BORN INTO THE REAL GAME."
 
 
+
+tutorial_2_1 "A WILDERNESS CHALLENGE:  SURVIVE ON YOUR OWN,  DIE OF OLD AGE.##(WALK WEST TO BYPASS THIS CHALLENGE.)"
+
+tutorial_2_2 "WANT TO JUMP RIGHT INTO THE MAIN GAME?##LIGHT THE TORCH TO SKIP THIS SOLO CHALLENGE."
+
+tutorial_2_21 "TUTORIAL COMPLETE.  AFTER YOU DIE, YOU'LL BE BORN FOR REAL.##A DEADLY PIT OF RATTLESNAKES IS PROVIDED FOR YOUR CONVENIENCE."
 
 
 
